cilium/hubble-ui-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  labels:
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
    k8s-app: hubble-ui
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`hubble.k8s.tosuke.me`)
    kind: Rule
    services:
    - name: hubble-ui
      port: 80
  tls:
    secretName: hubble-k8s-tosuke-me-cert
